Added UI and last week model (TraceRouteExec)